syntax = "proto3";

package genproto;
option go_package="genproto/courier_service";

message Distributor {
    string id = 1;
    string name = 2;
    string phone = 3;
    bool status = 4;
    string created_at = 5;
}

message DistributorFare {
    string distributor_id = 1;
    string fare_id = 2;
}


