syntax = "proto3";

package genproto;
option go_package="genproto/courier_service";

import "google/protobuf/empty.proto";
import "distributor.proto";

service DistributorService {
	rpc Create(Distributor) returns (CreateDistributorResponse) {}
	rpc Update(Distributor) returns (UpdateDistributorResponse) {}
	rpc GetDistributor(GetDistributorRequest) returns (GetDistributorResponse) {}
	rpc GetAllDistributors(GetAllDistributorsRequest) returns (GetAllDistributorsResponse) {}
	rpc Delete(DeleteDistributorRequest) returns (google.protobuf.Empty) {}
}

message CreateDistributorResponse {
	Distributor distributor = 1;
}

message UpdateDistributorResponse {
	Distributor distributor = 1;
}


message DeleteDistributorRequest {
    string id = 1;
}

message GetDistributorRequest {
	string id = 1;
}

message GetDistributorResponse {
	Distributor distributor = 1;
}


message GetAllDistributorsRequest {
	uint64 limit = 1;
    uint64 page = 2;
}

message GetAllDistributorsResponse {
	repeated Distributor distributors = 1;
	uint64 count = 2;
}
